fixed archive dropdown z-index

--- a/css/scaffold.css
+++ b/css/scaffold.css
@@ -82,6 +82,7 @@ a {
 .st3 { padding-left:140px; }
 
 /*------------------------------------------------------*/
+
 #nav_div {
 	position: -webkit-sticky;
 	position:sticky;
@@ -138,9 +139,9 @@ a {
 #research_img {
 	display:block;
 	margin:auto;
-	position:relative;
+/*	position:relative;
 	top:50%;
-	transform: translate(0, -50%);
+	transform: translate(0, -50%);*/
 	border-radius:3px;
 }
 #list_container {
@@ -159,16 +160,13 @@ a {
 	top:50%;
 }
 
-
-
-
-
-
+/*------------------------------------------------------*/
 
 /* The container <div> - needed to position the dropdown content */
 .dropdown {
     position: relative;
     display: inline-block;
+    z-index:1000;
 }
 
 /* Dropdown Content (Hidden by Default) */
@@ -203,8 +201,7 @@ a {
 	padding-right:10px;
 }
 
-
-
+/*------------------------------------------------------*/
 
 .table {
 	display: table;   /* Allow the centering to work */
@@ -266,7 +263,7 @@ a {
 	padding: 5px 15px;
 }
 
-
+/*------------------------------------------------------*/
 
 .pub_title {
 	font-size:16px;
@@ -280,63 +277,48 @@ a {
 	border-radius:5px;
 	font-size:0.8em;
 }
-
 #news_col {
 	padding:20px;
 }
-
-
 #bio_col {
 	padding:20px;
 	padding-left:100px;
 }
 
-#contact_row {
-
-}
+/*------------------------------------------------------*/
 
 .update_drop {
-    display: none;
-    position: absolute;
-    background-color: rgb(182, 173, 184);
- 	padding:10px 15px;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-    margin-left:-65px;
+	display: none;
+	position: absolute;
+	z-index:1000;
+	background-color: rgb(182, 173, 184);
+	padding:10px 15px;
+	box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+	margin-left:-65px;
 	width:300px;
 	height:550px;
 	color:#000;
 	font-size:small;
 	word-wrap: break-word;
 	white-space:normal;
-	z-index:1000;
 	text-align:left;
 }
-
 .dropdown:hover .update_drop {
     display: block;
-}
-/* Dropdown Content (Hidden by Default) */
-.dropdown_links {
-    display: none;
-    position: absolute;
-    background-color: rgb(182, 173, 184);
- 	padding:5px 15px;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-    margin-left:-65px;
 }
 
 /* Links inside the dropdown */
 .update_drop a {
     color: black;
-
 }
-
 /* Change color of dropdown links on hover */
-.update_drop a:hover {background-color: rgb(206, 200, 208);}
+.update_drop a:hover { background-color: rgb(206, 200, 208); }
+
+/*------------------------------------------------------*/
 
 #archive {
 	padding:10px;
 	font-size:large;
 	border-radius:5px;
-	text-decoration:none;
+	text-decoration:none;    
 }
